[package]
name = "storage_hal"
version = "0.1.3"
authors = ["JLer <jlerxky@live.com>"]
edition = "2021"
description = "A storage hybrid access layer"
categories = ["storage"]
keywords = ["storage", "cache"]
readme = "README.md"
repository = "https://github.com/JLerxky/storage_hal"
license = "Apache-2.0"

[features]
default = []

[dependencies]
storage_hal_derive = "0.1"

bincode = "1.3"
bytes = "1.5"
moka = { version = "0.12", features = ["sync"] }
parking_lot = "0.12"
serde = { version = "1.0", features = ["derive"] }
sled = "1.0.0-alpha"
tracing = "0.1"

[dev-dependencies]
async-std = "1.12"
