[package]
name = "storage_hal_derive"
version = "0.1.0"
authors = ["JLer <jlerxky@live.com>"]
edition = "2021"
description = "storage_hal macro"
categories = ["storage"]
keywords = ["storage", "cache"]
readme = "README.md"
repository = "https://github.com/JLerxky/storage_hal"
license = "Apache-2.0"

[lib]
proc-macro = true

[dependencies]
syn = "2.0"
quote = "1.0"
